[project]
name = "find-lines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Fokkema", email = "davidfokkema@icloud.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
find-lines = "find_lines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
