[project]
name = "find-lines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "platformdirs>=4.5.1",
    "textual>=3.5.0",
    "textual-plot>=0.10.0.post2",
    "typer>=0.16.0",
]

[project.scripts]
find-lines = "find_lines.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.12.0",
    "textual-dev>=1.7.0",
]
